// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-collapse-panel Renders \`c-collapse-panel\` with custom props 1`] = `
<ul
  class="v-expansion-panel c-collapse-panel theme--light"
>
  <li
    class="v-expansion-panel__container"
    style="background-color: grey;"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <span
        class="white--text"
      >
        
      </span>
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel__header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light white--text"
          >
            custom_icon
          </i>
        </div>
      </transition-stub>
    </div>
    <transition-stub
      mode="in-out"
      name="expand-transition"
    >
      <div
        class="v-expansion-panel__body"
        style="display: none;"
      />
    </transition-stub>
  </li>
</ul>
`;

exports[`c-collapse-panel Renders \`c-collapse-panel\` with custom title 1`] = `
<ul
  class="v-expansion-panel c-collapse-panel theme--light"
>
  <li
    class="v-expansion-panel__container"
    style="background-color: grey;"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <span
        class="white--text"
      >
        Custom title
      </span>
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel__header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light white--text"
          >
            keyboard_arrow_down
          </i>
        </div>
      </transition-stub>
    </div>
    <transition-stub
      mode="in-out"
      name="expand-transition"
    >
      <div
        class="v-expansion-panel__body"
        style="display: none;"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__text"
          />
        </div>
      </div>
    </transition-stub>
  </li>
</ul>
`;

exports[`c-collapse-panel Renders \`c-collapse-panel\` with default props 1`] = `
<ul
  class="v-expansion-panel c-collapse-panel theme--light"
>
  <li
    class="v-expansion-panel__container"
    style="background-color: grey;"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <span
        class="white--text"
      >
        
      </span>
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel__header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light white--text"
          >
            keyboard_arrow_down
          </i>
        </div>
      </transition-stub>
    </div>
    <transition-stub
      mode="in-out"
      name="expand-transition"
    >
      <div
        class="v-expansion-panel__body"
        style="display: none;"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__text"
          />
        </div>
      </div>
    </transition-stub>
  </li>
</ul>
`;

exports[`c-collapse-panel Renders \`c-collapse-panel\` with errors 1`] = `
<ul
  class="v-expansion-panel c-collapse-panel theme--light"
>
  <li
    class="v-expansion-panel__container error"
    style="background-color: grey;"
    tabindex="0"
  >
    <div
      class="v-expansion-panel__header"
    >
      <span
        class="white--text"
      >
        Custom title with errors
      </span>
      <transition-stub
        name="fade-transition"
      >
        <div
          class="v-expansion-panel__header__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light white--text"
          >
            keyboard_arrow_down
          </i>
        </div>
      </transition-stub>
    </div>
    <transition-stub
      mode="in-out"
      name="expand-transition"
    >
      <div
        class="v-expansion-panel__body"
        style="display: none;"
      >
        <div
          class="v-card v-sheet theme--light"
        >
          <div
            class="v-card__text"
          />
        </div>
      </div>
    </transition-stub>
  </li>
</ul>
`;
